--- a/inventory.ini
+++ b/inventory.ini
@@ -20,5 +20,7 @@ rabbitmq.ramakrishna.cloud
 payment.ramakrishna.cloud
 [dispatch]
 dispatch.ramakrishna.cloud
-[all:vars]
-ansible_password=DevOps321
+; [all:vars]
+; ansible_password=DevOps321
+[localhost]
+localhost
