--- a/roles/rabbitmq/tasks/main.yaml
+++ b/roles/rabbitmq/tasks/main.yaml
@@ -15,8 +15,16 @@
       state: restarted
       enabled: yes 
 
-  - name: create rabbitmq server 
-    ansible.builtin.command: rabbitmqctl add_user roboshop roboshop123
+  - name: create rabbitmq user 
+    ansible.builtin.command: 
+      user: "{{lookup('aws_sms','/roboshop/{{env}}/rabbitmq_user',region='us-east-1',decrypt=True)}}"
+      password: "{{lookup('aws_sms','/roboshop/{{env}}/rabbitmq_password',region='us-east-1',decrypt=True)}}"
+      vhost: /
+      configure_priv: .* 
+      read_priv:
+      write_priv:
+      state: present
 
-  - name: set permissions
-    ansible.builtin.command: rabbitmqctl set_permissions -p / roboshop ".*" ".*" ".*"
+
+  # - name: set permissions
+  #   ansible.builtin.command: rabbitmqctl set_permissions -p / roboshop ".*" ".*" ".*"
