--- a/roles/rabbitmq/tasks/main.yaml
+++ b/roles/rabbitmq/tasks/main.yaml
@@ -15,16 +15,16 @@
       state: restarted
       enabled: yes 
 
-  - name: create rabbitmq user 
+  
+  - name: create rabbitmq user
     community.rabbitmq.rabbitmq_user:
-    ansible.builtin.command: 
-      user: "{{ lookup('aws_ssm', '/roboshop/{{env}}/rabbitmq_user', region='us-east-1', decrypt=True ) }}"
-      password: "{{ lookup('aws_ssm', '/roboshop/{{env}}/rabbitmq_password', region='us-east-1', decrypt=True ) }}"
-      vhost: /
-      configure_priv: .* 
-      read_priv:
-      write_priv:
-      state: present
+    user: "{{ lookup('aws_ssm', '/roboshop/{{env}}/rabbitmq_user', region='us-east-1', decrypt=True ) }}"
+    password: "{{ lookup('aws_ssm', '/roboshop/{{env}}/rabbitmq_password', region='us-east-1', decrypt=True ) }}"
+    vhost: /
+    configure_priv: .*
+    read_priv: .*
+    write_priv: .*
+    state: present
 
 
   # - name: set permissions
